# celerity-comp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFLINT.cmake
examples/: 2mm.cl  3mm.cl  coalesced.cl  features_from_OpenCL.sh  features_from_SYCL.sh  kmeans.cl  parboil.cl  simple_loop.c  softmax_loss.cl  vector-add-CL.c  vector_add_kernel.cl
include/: CoalescedAnalysis.hpp  DefaultFeatureAnalysis.hpp  FeatureAnalysis.hpp  FeatureNormalization.h  FeatureNormalization.hpp  FeaturePass.hpp  FeaturePrinter.hpp  FeatureSet.hpp  IMPoly.hpp  KernelInvariant.hpp  Kofler13Analysis.hpp  MemAccessFeature.hpp  PolFeatAnalysis.hpp  PolFeatPass.hpp  PolFeatPrinter.hpp  Registry.hpp  celerity_interface_pass.h  coalescing_analysis_pass.h  crel_extractor.h  crel_feature_pass.h  crel_feature_set.h  crel_kernel.h  crel_llvm_helper.h  crel_mpoly.h  feature_eval.h  feature_norm.h  feature_pass.h  feature_set.h
src/: DefaultFeatureAnalysis.cpp  FeatureAnalysis.cpp  FeatureAnalysisPlugin.cpp  FeaturePass.cpp  FeaturePrinter.cpp  FeatureSet.cpp  IMPoly.cpp  KernelInvariant.cpp  Kofler13Analysis.cpp  PolFeatAnalysis.cpp  PolFeatPass.cpp  celerity_interface_pass.cpp  crel_extract_tool.cpp  crel_extractor.cpp  crel_feature_pass.cpp  crel_feature_set.cpp  crel_kernel.cpp  crel_mpoly.cpp  feature_eval.cpp  feature_pass.cpp  feature_set.cpp  feature_tool.cpp  test_impoly.cpp
